@@ -1,3 +1,8 @@
+2010-03-02  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* progspace.c (update_address_spaces): Update inferior address spaces
+	also.
+
 2010-02-26  David Daney  <ddaney.caviumnetworks.com>
 
 	* mips-linux-tdep.c: Update struct sigframe comments.
